--- a/packages/docs/src/routes/docs/providers/meta/index.mdx
+++ b/packages/docs/src/routes/docs/providers/meta/index.mdx
@@ -9,7 +9,10 @@ prestarles ayuda a través del canal que ellos prefieran.
 
 ### Requerimientos
 
--   Registrar una cuenta de [facebook developers](https://developers.facebook.com/apps)
+- Registrar una cuenta de [facebook developers](https://developers.facebook.com/apps)
+- Tendrás que verificar tu negocio y tu aplicación con documentos oficiales, cuyo tipo puede variar dependiendo de tu país.
+- Deberás asociar a tu cuenta un número de teléfono oficial de tu negocio que no esté vinculado con ninguna otra cuenta de WhatsApp, ya sea regular o Business. Para las pruebas, Meta provee un número de teléfono gratuito.
+- Meta ofrece 1000 conversaciones gratuitas iniciadas por el cliente hacia el bot, y 250 conversaciones gratuitas iniciadas por el bot hacia el cliente. Una vez alcanzado este límite, cada conversación adicional tendrá un costo que puede variar dependiendo de tu país o región.
 
 ---
 
