--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -24,7 +24,7 @@ npm create bot-whatsapp@latest
         muted
         playsinline
     >
-        <source src="https://leifer-landing-page.s3.us-east-2.amazonaws.com/console.webm" type="video/webm" />
+        <source src="/videos/console.webm" type="video/webm" />
     </video>
 </div>
 
