--- a/packages/docs/src/routes/docs/install/index.mdx
+++ b/packages/docs/src/routes/docs/install/index.mdx
@@ -28,7 +28,7 @@ El **CLI** te hace una revisión previa, de versión de Node y sistema operativo
         muted
         playsinline
     >
-        <source src="https://leifer-landing-page.s3.us-east-2.amazonaws.com/console.webm" type="video/webm" />
+        <source src="/videos/console.webm" type="video/webm" />
     </video>
 </div>
 
