--- a/packages/docs/src/routes/docs/flow-dynamic/index.mdx
+++ b/packages/docs/src/routes/docs/flow-dynamic/index.mdx
@@ -50,7 +50,8 @@ const flowString = addKeyword('ver categorias')
         await flowDynamic([
             {
                 body:"soy una imagen",
-                media:'https://i.imgur.com/0HpzsEm.png'
+                media:'https://i.imgur.com/0HpzsEm.png',
+                delay:1000
             }
         ]) 
         
